concord_macros/tests/trybuild/fail/codegen/reserved_websocket_unsupported.stderr
error: `WebSocket` endpoint I/O is reserved but not supported yet
 --> tests/trybuild/fail/codegen/reserved_websocket_unsupported.rs:8:12
  |
8 |         -> WebSocket<String, String>
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^
